Usar las imagenes de los cursos en cuadricula y comentarios nesesarios para entender el CSS...

--- a/Pagina_personal.html
+++ b/Pagina_personal.html
@@ -53,10 +53,13 @@
         <h2>Proyectos</h2>
         <p> Movil App: Calculo de Fuerzas Electricas ( Ficcoding ).</p>
         <img src="assets/Ficcoding.png" alt="Logo Ficcoding">
+        <br>
         <p> Movil App: SnapNote.</p>
         <img src="assets/SnapNote.png" alt="Logo SnapNote">
+        <br>
         <p> Pagina Web: Cursos sobre Ingeniera de Software y computación.</p>
         <img src="assets/Logo Cheiviz_shop.png" alt="Logo Cheiviz_shop">
+        
     </div>
     <div class="Diseño-1">
         <h2>Estudios</h2>
@@ -79,6 +82,14 @@
         <h2>The Cheiviz Shop</h2>
         <img src="assets/Logo Cheiviz_shop.png" alt="Logo Cheiviz Shop">
         <p>Cheiviz Shop es una plataforma de aprendizaje con cursos de diferentes niveles y excelente contenido.</p>
+        <div class="Grupo_imagenes">
+        <img src="assets/Bases_Datos.png" alt="Curso Bases_Datos">
+        <img src="assets/Desarrollo_Movil.png" alt="Curso Desarrollo_Movil">
+        <img src="assets/Desarrollo_Web.png" alt="Curso Desarrollo_Web">
+        <img src="assets/Python_Principiante.png" alt="Curso Python_Principiante">
+        <img src="assets/Python_Intermedio.png" alt="Curso Python_Intermedio">
+    </div>
+    <br>
         <a href="https://thecheivizshop.weebly.com" target="_blank">Visitar The Cheiviz Shop</a>
     </div>
 
