--- a/index.html
+++ b/index.html
@@ -7,189 +7,190 @@
 </head>
 
 <body>
+    <header>
+        <div class='Parte_supeior'>
+            <h1>Deiby Ramirez</h1>
+            <p> Ingeniero de Software y Computación</p>
+            <p> Estudiante Universitario de la Corporación Universitaria Autonoma del Cauca </p>
+        </div>
 
-<header>
-    <div class='Parte_supeior'>
-        <h1>Deiby Ramirez</h1>
-        <p> Ingeniero de Software y Computación</p>
-        <p> Estudiante Universitario de la Corporación Universitaria Autonoma del Cauca </p>
-    </div>
 
+    </header>
 
-</header>
-
-<nav>
-    <ul>
-        <li><a href="#Hobbies"> Hobbies</a></li>
-        <li><a href="#Mi_Favorito"> Hobbie_Favorito</a></li>
-        <li><a href="#Presentacion"> Presentación</a></li>
-        <li><a href="#Proyectos"> Proyectos</a></li>
-        <li><a href="#Estudios"> Estudios</a></li>
-        <li><a href="#The_cheiviz"> The_Cheiviz</a></li>
-        <li><a href="#Blog"> Blog</a></li>
-    </ul>
-</nav>
+    <nav>
+        <ul>
+            <li><a href="#Hobbies"> Hobbies</a></li>
+            <li><a href="#Mi_Favorito"> Hobbie_Favorito</a></li>
+            <li><a href="#Presentacion"> Presentación</a></li>
+            <li><a href="#Proyectos"> Proyectos</a></li>
+            <li><a href="#Estudios"> Estudios</a></li>
+            <li><a href="#The_cheiviz"> The_Cheiviz</a></li>
+            <li><a href="#Blog"> Blog</a></li>
+        </ul>
+    </nav>
 
 
 
     <div class="Diseño-1">
         <section id="Hobbies">
-        <h2>Hobbies 🎲</h2>
-        <ul>
-            <li>
-                <p>Me gusta programar en Python, trabajar con bases de datos y explorar el mundo de la ciberseguridad.
-                </p>
-            </li>
-            <li>
-                <p>Me interesa aprender a crear redes neuronales para inteligencia artificial.</p>
-            </li>
-            <li>
-                <p>Disfruto la música, bailar, viajar y jugar videojuegos.</p>
-            </li>
-            <li>
-                <p>Me apasiona aprender sobre el funcionamiento de motores de vehículos y nuevos lenguajes de
-                    programación.</p>
-            </li>
-            <li>
-                <p>Mi deporte preferido es el fútbol.</p>
-            </li>
-            <li>
-                <p>Me gusta ver partidos de fútbol y carreras de Fórmula 1.</p>
-            </li>
-        </ul>
-    </section>
+            <h2>Hobbies 🎲</h2>
+            <ul>
+                <li>
+                    <p>Me gusta programar en Python, trabajar con bases de datos y explorar el mundo de la
+                        ciberseguridad.
+                    </p>
+                </li>
+                <li>
+                    <p>Me interesa aprender a crear redes neuronales para inteligencia artificial.</p>
+                </li>
+                <li>
+                    <p>Disfruto la música, bailar, viajar y jugar videojuegos.</p>
+                </li>
+                <li>
+                    <p>Me apasiona aprender sobre el funcionamiento de motores de vehículos y nuevos lenguajes de
+                        programación.</p>
+                </li>
+                <li>
+                    <p>Mi deporte preferido es el fútbol.</p>
+                </li>
+                <li>
+                    <p>Me gusta ver partidos de fútbol y carreras de Fórmula 1.</p>
+                </li>
+            </ul>
+        </section>
     </div>
 
     <div class="Diseño-1">
         <section id="Mi_Favorito">
-        <h2>Videojuegos 🎮</h2>
-        <p>Mi hobbie favorito es jugar juegos de consola, ya que me parece increible seguir y
-            enterder los relatos de las historias de los videojuegos, mis juegos favoritos
-            son todos aquellos de mundo abierto, en los cuales debo hacer misiones y cumplir unas metas
-            para avanzar.</p>
+            <h2>Videojuegos 🎮</h2>
+            <p>Mi hobbie favorito es jugar juegos de consola, ya que me parece increible seguir y
+                enterder los relatos de las historias de los videojuegos, mis juegos favoritos
+                son todos aquellos de mundo abierto, en los cuales debo hacer misiones y cumplir unas metas
+                para avanzar.</p>
 
-        <p> Mi lista de videojuegos favorita es:</p>
+            <p> Mi lista de videojuegos favorita es:</p>
 
-        <div class="Videojuegos">
+            <div class="Videojuegos">
 
-            <div class="juego">
-                <p> Call of duty</p>
-                <img src="assets/call_of_dutyjpg.jpg" alt="Call of duty">
-                </li>
+                <div class="juego">
+                    <p> Call of duty</p>
+                    <img src="assets/call_of_dutyjpg.jpg" alt="Call of duty">
+                    </li>
+                </div>
+                <video id="video1" src="assets/Video.mp4" width="250" height="250" controls></video>
+
+                <div class="juego">
+                    <p>
+                        God of War
+                        <img src="assets/god_of_war.jpg" alt="God of war">
+                    </p>
+
+                </div>
+                <div class="juego">
+                    <p>
+                        Assassin's Creed
+                        <img src="assets/Assassin's Creed.jpg" alt="Assassin">
+                    </p>
+
+                </div>
+                <div class="juego">
+                    <p>
+                        Far Cry
+                        <img src="assets/Far_cry.jpg" alt="Far cry">
+                    </p>
+
+                </div>
+                <div class="juego">
+                    <p>
+                        Hitman
+                        <img src="assets/Hitman.jpg" alt="Hitman">
+                    </p>
+
+                </div>
+
+
             </div>
-            <video id="video1" src="assets/Video.mp4" width="250" height="250" controls></video>
-
-            <div class="juego">
-                <p>
-                    God of War
-                    <img src="assets/god_of_war.jpg" alt="God of war">
-                </p>
-
-            </div>
-            <div class="juego">
-                <p>
-                    Assassin's Creed
-                    <img src="assets/Assassin's Creed.jpg" alt="Assassin">
-                </p>
-
-            </div>
-            <div class="juego">
-                <p>
-                    Far Cry
-                    <img src="assets/Far_cry.jpg" alt="Far cry">
-                </p>
-
-            </div>
-            <div class="juego">
-                <p>
-                    Hitman
-                    <img src="assets/Hitman.jpg" alt="Hitman">
-                </p>
-
-            </div>
-
-
-        </div>
-    </section>
+        </section>
     </div>
 
 
 
     <div class="Diseño-1">
         <section id="Presentacion">
-        <h2>Presentación 😁</h2>
-        <p> Soy un Joven de 19 años cursando la carrera de Ingenieria de Software y Computación,
-            voy en 5 semestre esta pagina tiene la finalidad de mostrar como soy y como me gusta ser, un man parchado
-            que maneja los tiempos.
-        </p>
-    </section>
+            <h2>Presentación 😁</h2>
+            <p> Soy un Joven de 19 años cursando la carrera de Ingenieria de Software y Computación,
+                voy en 5 semestre esta pagina tiene la finalidad de mostrar como soy y como me gusta ser, un man
+                parchado
+                que maneja los tiempos.
+            </p>
+        </section>
     </div>
     <div class="Diseño-1">
         <section id="Proyectos">
-        <h2>Proyectos 📁</h2>
-        <p> Movil App: Calculo de Fuerzas Electricas ( Ficcoding ).</p>
-        <img src="assets/Ficcoding.png" alt="Logo Ficcoding">
-        <br>
-        <p> Movil App: SnapNote.</p>
-        <img src="assets/SnapNote.png" alt="Logo SnapNote">
-        <br>
-        <p> Pagina Web: Cursos sobre Ingeniera de Software y computación.</p>
-        <img src="assets/Logo Cheiviz_shop.png" alt="Logo Cheiviz_shop">
-    </section>
+            <h2>Proyectos 📁</h2>
+            <p> Movil App: Calculo de Fuerzas Electricas ( Ficcoding ).</p>
+            <img src="assets/Ficcoding.png" alt="Logo Ficcoding">
+            <br>
+            <p> Movil App: SnapNote.</p>
+            <img src="assets/SnapNote.png" alt="Logo SnapNote">
+            <br>
+            <p> Pagina Web: Cursos sobre Ingeniera de Software y computación.</p>
+            <img src="assets/Logo Cheiviz_shop.png" alt="Logo Cheiviz_shop">
+        </section>
     </div>
     <div class="Diseño-1">
         <section id="Estudios">
-        <h2>Estudios 🎓</h2>
-        <ul>
-            <li>
-                <p> Ingeniero de Software y computación</p>
-            </li>
-            <li>
-                <p> Tecnico en Mecanica Automotriz</p>
-            </li>
-            <li>
-                <p> Nivel Basico Majeno de IA</p>
-            </li>
-            <li>
-                <p> Ingles</p>
-            </li>
-        </ul>
-    </section>
+            <h2>Estudios 🎓</h2>
+            <ul>
+                <li>
+                    <p> Ingeniero de Software y computación</p>
+                </li>
+                <li>
+                    <p> Tecnico en Mecanica Automotriz</p>
+                </li>
+                <li>
+                    <p> Nivel Basico Majeno de IA</p>
+                </li>
+                <li>
+                    <p> Ingles</p>
+                </li>
+            </ul>
+        </section>
     </div>
     <div class="Diseño-1">
         <section id="The_cheiviz">
-        <h2>The Cheiviz Shop 🛒</h2>
-        <img src="assets/Logo Cheiviz_shop.png" alt="Logo Cheiviz Shop">
-        <p>Cheiviz Shop es una plataforma de aprendizaje con cursos de diferentes niveles y excelente contenido.</p>
-        <div class="Grupo_imagenes">
-            <img src="assets/Bases_Datos.png" alt="Curso Bases_Datos">
-            <img src="assets/Desarrollo_Movil.png" alt="Curso Desarrollo_Movil">
-            <img src="assets/Desarrollo_Web.png" alt="Curso Desarrollo_Web">
-            <img src="assets/Python_Principiante.png" alt="Curso Python_Principiante">
-            <img src="assets/Python_Intermedio.png" alt="Curso Python_Intermedio">
-        </div>
-        <br>
-        <a href="https://thecheivizshop.weebly.com" target="_blank">Visitar The Cheiviz Shop</a>
-    </section>
+            <h2>The Cheiviz Shop 🛒</h2>
+            <img src="assets/Logo Cheiviz_shop.png" alt="Logo Cheiviz Shop">
+            <p>Cheiviz Shop es una plataforma de aprendizaje con cursos de diferentes niveles y excelente contenido.</p>
+            <div class="Grupo_imagenes">
+                <img src="assets/Bases_Datos.png" alt="Curso Bases_Datos">
+                <img src="assets/Desarrollo_Movil.png" alt="Curso Desarrollo_Movil">
+                <img src="assets/Desarrollo_Web.png" alt="Curso Desarrollo_Web">
+                <img src="assets/Python_Principiante.png" alt="Curso Python_Principiante">
+                <img src="assets/Python_Intermedio.png" alt="Curso Python_Intermedio">
+            </div>
+            <br>
+            <a href="https://thecheivizshop.weebly.com" target="_blank">Visitar The Cheiviz Shop</a>
+        </section>
     </div>
 
     <div class="Diseño-1">
         <section id="Blog">
-        <h2>Blog 📓</h2>
-        <article>
-            <p>Estoy planeando crear una aplicación en la cual se muestre el
-                funcionamiento de las conexiones elecricas de las motos y carros.</p>
-            
-            <p>Estoy planeadno crear una aplicacion que simule la deflexion de los 
-                perlines de una cosntrucción de acuerdo a los pesos que este somentido y la longitud de dicho perlin </p>
-        </article>
-    </section>
+            <h2>Blog 📓</h2>
+            <article>
+                <p>Estoy planeando crear una aplicación en la cual se muestre el
+                    funcionamiento de las conexiones elecricas de las motos y carros.</p>
+
+                <p>Estoy planeadno crear una aplicacion que simule la deflexion de los
+                    perlines de una cosntrucción de acuerdo a los pesos que este somentido y la longitud de dicho perlin
+                </p>
+            </article>
+        </section>
     </div>
 
     <footer>
-</footer>
-</body>
-</html>
+        <p>deiby.ramirez.g@uniautonoma.edu.co 🎓</p>
+        <p>🎲 The Cheiviz 🎲</p>
     </footer>
 </body>
 
