--- a/index.html
+++ b/index.html
@@ -4,60 +4,100 @@
 <head>
     <title>Deiby Alejandro Ramirez Galvis</title>
     <link rel="stylesheet" href="Diseño_pagina.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
     <header>
-        <div class='Parte_supeior'>
-            <h1>Deiby Ramirez</h1>
-            <p> Ingeniero de Software y Computación</p>
-            <p> Estudiante Universitario de la Corporación Universitaria Autonoma del Cauca </p>
+        <div class="container">
+            <div class='Parte_superior'>
+                <div class="row">
+                    <div class="col-md-8">
+                        <h1>Deiby Ramirez</h1>
+                        <p> Ingeniero de Software y Computación</p>
+                        <p> Estudiante Universitario de la Corporación Universitaria Autonoma del Cauca </p>
+                    </div>
+                    <div class="col-md-4 d-flex justify-content-center align-items-center">
+                        <img src="assets/Personaje.jpg" alt="Personaje" class="img-fluid rounded-circle"
+                            style="width: 150px; height: 150px; object-fit: cover;">
+                    </div>
+                </div>
+            </div>
         </div>
-
-
     </header>
 
-    <nav>
-        <ul>
-            <li><a href="#Hobbies"> Hobbies</a></li>
-            <li><a href="#Mi_Favorito"> Hobbie_Favorito</a></li>
-            <li><a href="#Presentacion"> Presentación</a></li>
-            <li><a href="#Proyectos"> Proyectos</a></li>
-            <li><a href="#Estudios"> Estudios</a></li>
-            <li><a href="#The_cheiviz"> The_Cheiviz</a></li>
-            <li><a href="#Blog"> Blog</a></li>
-        </ul>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Navegación</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#Hobbies">Hobbies</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#Mi_Favorito">Hobbie Favorito</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#Presentacion">Presentación</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#Proyectos">Proyectos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#Estudios">Estudios</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#The_cheiviz">The Cheiviz</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#Blog">Blog</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </nav>
 
 
-
-    <div class="Diseño-1">
-        <section id="Hobbies">
-            <h2>Hobbies 🎲</h2>
-            <ul>
-                <li>
-                    <p>Me gusta programar en Python, trabajar con bases de datos y explorar el mundo de la
-                        ciberseguridad.
-                    </p>
-                </li>
-                <li>
-                    <p>Me interesa aprender a crear redes neuronales para inteligencia artificial.</p>
-                </li>
-                <li>
-                    <p>Disfruto la música, bailar, viajar y jugar videojuegos.</p>
-                </li>
-                <li>
-                    <p>Me apasiona aprender sobre el funcionamiento de motores de vehículos y nuevos lenguajes de
-                        programación.</p>
-                </li>
-                <li>
-                    <p>Mi deporte preferido es el fútbol.</p>
-                </li>
-                <li>
-                    <p>Me gusta ver partidos de fútbol y carreras de Fórmula 1.</p>
-                </li>
-            </ul>
-        </section>
+    <div class="container">
+        <div class="Diseño-1">
+            <div class="row">
+                <div class="col-md-2"></div>
+                <section id="Hobbies">
+                    <h2>Hobbies 🎲</h2>
+                    <ul>
+                        <li>
+                            <p>Me gusta programar en Python, trabajar con bases de datos y explorar el mundo de la
+                                ciberseguridad.
+                            </p>
+                        </li>
+                        <li>
+                            <p>Me interesa aprender a crear redes neuronales para inteligencia artificial.</p>
+                        </li>
+                        <li>
+                            <p>Disfruto la música, bailar, viajar y jugar videojuegos.</p>
+                        </li>
+                        <li>
+                            <p>Me apasiona aprender sobre el funcionamiento de motores de vehículos y nuevos
+                                lenguajes
+                                de
+                                programación.</p>
+                        </li>
+                        <li>
+                            <p>Mi deporte preferido es el fútbol.</p>
+                        </li>
+                        <li>
+                            <p>Me gusta ver partidos de fútbol y carreras de Fórmula 1.</p>
+                        </li>
+                    </ul>
+                </section>
+            </div>
+        </div>
+    </div>
     </div>
 
     <div class="Diseño-1">
@@ -70,47 +110,49 @@
 
             <p> Mi lista de videojuegos favorita es:</p>
 
-            <div class="Videojuegos">
-
-                <div class="juego">
-                    <p> Call of duty</p>
-                    <img src="assets/call_of_dutyjpg.jpg" alt="Call of duty">
-                    </li>
-                </div>
-                <video id="video1" src="assets/Video.mp4" width="250" height="250" controls></video>
-
-                <div class="juego">
-                    <p>
-                        God of War
-                        <img src="assets/god_of_war.jpg" alt="God of war">
-                    </p>
-
-                </div>
-                <div class="juego">
-                    <p>
-                        Assassin's Creed
-                        <img src="assets/Assassin's Creed.jpg" alt="Assassin">
-                    </p>
-
-                </div>
-                <div class="juego">
-                    <p>
-                        Far Cry
-                        <img src="assets/Far_cry.jpg" alt="Far cry">
-                    </p>
+            <div class="container-fluid d-flex justify-content-center">
+                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active text-center">
+                            <h4>Call of Duty</h4>
+                            <img class="d-block w-45" src="assets/call_of_dutyjpg.jpg" alt="First slide">
+                        </div>
+                        <div class="carousel-item text-center">
+                            <h4>God of War</h4>
+                            <img class="d-block w-45" src="assets/god_of_war.jpg" alt="Second slide">
+                        </div>
+                        <div class="carousel-item text-center">
+                            <h4>Assassin's Creed</h4>
+                            <img class="d-block w-45" src="assets/Assassin's Creed.jpg" alt="Third slide">
+                        </div>
+                        <div class="carousel-item text-center">
+                            <h4>Far Cry</h4>
+                            <img class="d-block w-45" src="assets/Far_cry.jpg" alt="Fourth slide">
+                        </div>
+                        <div class="carousel-item text-center">
+                            <h4>Hitman</h4>
+                            <img class="d-block w-45" src="assets/Hitman.jpg" alt="Fifth slide">
+                        </div>
+                    </div>
 
                 </div>
-                <div class="juego">
-                    <p>
-                        Hitman
-                        <img src="assets/Hitman.jpg" alt="Hitman">
-                    </p>
-
-                </div>
-
-
             </div>
-        </section>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only"></span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-bs-slide="next"></a>
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only"></span>
+            </a>
+            <div class="container-fluid d-flex justify-content-center">
+                <video src="assets/Video.mp4" class="img-fluid" controls></video>
+            </div>
+    </div>
+    </div>
+
+
+    </section>
     </div>
 
 
@@ -160,17 +202,32 @@
     <div class="Diseño-1">
         <section id="The_cheiviz">
             <h2>The Cheiviz Shop 🛒</h2>
-            <img src="assets/Logo Cheiviz_shop.png" alt="Logo Cheiviz Shop">
+            <div class="text-center">
+                <img src="assets/Logo Cheiviz_shop.png" alt="Logo Cheiviz Shop" class="img-fluid">
+            </div>
             <p>Cheiviz Shop es una plataforma de aprendizaje con cursos de diferentes niveles y excelente contenido.</p>
-            <div class="Grupo_imagenes">
-                <img src="assets/Bases_Datos.png" alt="Curso Bases_Datos">
-                <img src="assets/Desarrollo_Movil.png" alt="Curso Desarrollo_Movil">
-                <img src="assets/Desarrollo_Web.png" alt="Curso Desarrollo_Web">
-                <img src="assets/Python_Principiante.png" alt="Curso Python_Principiante">
-                <img src="assets/Python_Intermedio.png" alt="Curso Python_Intermedio">
+            <div class="row Grupo_imagenes">
+                <div class="col-md-4 col-sm-6 mb-3">
+                    <img src="assets/Bases_Datos.png" alt="Curso Bases_Datos" class="img-fluid">
+                </div>
+                <div class="col-md-4 col-sm-6 mb-3">
+                    <img src="assets/Desarrollo_Movil.png" alt="Curso Desarrollo_Movil" class="img-fluid">
+                </div>
+                <div class="col-md-4 col-sm-6 mb-3">
+                    <img src="assets/Desarrollo_Web.png" alt="Curso Desarrollo_Web" class="img-fluid">
+                </div>
+                <div class="col-md-4 col-sm-6 mb-3">
+                    <img src="assets/Python_Principiante.png" alt="Curso Python_Principiante" class="img-fluid">
+                </div>
+                <div class="col-md-4 col-sm-6 mb-3">
+                    <img src="assets/Python_Intermedio.png" alt="Curso Python_Intermedio" class="img-fluid">
+                </div>
             </div>
             <br>
-            <a href="https://thecheivizshop.weebly.com" target="_blank">Visitar The Cheiviz Shop</a>
+            <div class="text-center">
+                <a href="https://thecheivizshop.weebly.com" target="_blank" class="btn btn-primary">Visitar The Cheiviz
+                    Shop</a>
+            </div>
         </section>
     </div>
 
@@ -188,10 +245,123 @@
         </section>
     </div>
 
-    <footer>
-        <p>deiby.ramirez.g@uniautonoma.edu.co 🎓</p>
-        <p>🎲 The Cheiviz 🎲</p>
+    <div class="Diseño-1">
+        <div class="container mt-5">
+            <h2>Formulario de Inscripcion The Cheiviz📩</h2>
+            <br>
+            <form id="contactForm" action="procesar_formulario.php" method="POST">
+                <div class="mb-3">
+                    <label for="nombre" class="form-label">Nombre:</label>
+                    <input type="text" class="form-control" id="nombre" name="nombre" required>
+                </div>
+
+                <div class="mb-3">
+                    <label for="email" class="form-label">Correo Electrónico:</label>
+                    <input type="email" class="form-control" id="email" name="email" required>
+                </div>
+
+                <div class="mb-3">
+                    <label for="cursos">Selecciona un curso:</label>
+                    <br><br>
+                    <select id="cursos" name="cursos">
+                        <option value="Desarrollo_Movil">Desarrollo Movil</option>
+                        <option value="Desarrollo_Web">Desarrollo Web</option>
+                        <option value="Bases_Datos">Bases Datos</option>
+                        <option value="Python_Principiante"> Python Principiante</option>
+                        <option value="Python_Intermedio"> Python Intermedio</option>
+                    </select>
+                    <br>
+                    <br>
+                    <input type="submit" value="Ingresar">
+                </div>
+
+                <div class="mb-3">
+                    <label for="mensaje" class="form-label">Mensaje:</label>
+                    <textarea class="form-control" id="mensaje" name="mensaje" rows="4" required></textarea>
+                </div>
+
+                <button type="submit" class="btn btn-primary" onclick= null>Enviar</button>
+                <button type="button" class="btn btn-primary" onclick="startProgress()">Visualizar Tabla</button>
+
+                <div id="progress-container" class="mt-3" style="display: none;">
+                    <h2>Cargando . . .</h2>
+                    <div class="progress">
+                        <div id="progress-bar" class="progress-bar progress-bar-striped progress-bar-animated"
+                            role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0"
+                            aria-valuemax="100">
+                            0%
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <script>
+        //carga  = 0 porque es el inico
+        var carga_barra = 0;
+
+        //Fucnion para empezar el progreso de la barra
+        function startProgress() {
+            // Muestra el contenedor de la barra de progreso
+            document.getElementById("progress-container").style.display = "block";
+            // Obtiene el elemento de la barra de progreso
+            const progressBar = document.getElementById("progress-bar");
+            // Configura un intervalo que se ejecuta cada 500 milisegundos (1/2 segundo)
+            const interval = setInterval(() => {
+                // Si carga_barra es menor que 100, incrementa su valor en 10
+                if (carga_barra < 100) {
+                    carga_barra += 10;
+                    // Actualiza el ancho de la barra de progreso
+                    progressBar.style.width = carga_barra + "%";
+                    // Actualiza el texto dentro de la barra de progreso
+                    progressBar.innerText = carga_barra + "%";
+                } else {
+                    // Si carga_barra es 100 o más, detiene el intervalo
+                    clearInterval(interval);
+                    // Redirige a la página 'index2.html'
+                    window.location.href = 'index2.html';
+                }
+            }, 500); // Incrementa cada 1/2 segundos
+        }
+    </script>
+
+    <footer class="bg-light text-center text-lg-start mt-4">
+        <div class="container p-4">
+            <div class="row">
+                <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+                    <h5 class="text-uppercase">Contacto</h5>
+                    <p>deiby.ramirez.g@uniautonoma.edu.co 🎓</p>
+                </div>
+                <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+                    <h5 class="text-uppercase">Proyecto</h5>
+                    <p>🎲 The Cheiviz 🎲</p>
+                </div>
+            </div>
+        </div>
+        <div class="text-center p-3 bg-dark text-white">
+            © 2023 Deiby Ramirez
+        </div>
     </footer>
+    </div>
+    <script>
+        // Simulación de carga dinámica en la barra de progreso
+        let progress = 50;
+        const progressBar = document.getElementById("progress-bar");
+
+        function increaseProgress() {
+            if (progress < 100) {
+                progress += 10;
+                progressBar.style.width = progress + "%";
+                progressBar.innerText = progress + "%";
+            }
+        }
+
+        setInterval(increaseProgress, 2000); // Incrementa cada 2 segundos
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
