--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 
 <head>
     <title>Deiby Alejandro Ramirez Galvis</title>
+    <!-- Etiquetas de Bootstrap-->
     <link rel="stylesheet" href="Diseño_pagina.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
+    <!-- HEADER -->
     <header>
         <div class="container">
             <div class='Parte_superior'>
@@ -27,6 +29,7 @@
         </div>
     </header>
 
+    <!-- Barra de navegacion-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Navegación</a>
@@ -62,7 +65,7 @@
         </div>
     </nav>
 
-
+    <!-- HOBBIES -->
     <div class="container">
         <div class="Diseño-1">
             <div class="row">
@@ -100,6 +103,7 @@
     </div>
     </div>
 
+    <!-- HOBBIE FAVORITO -->
     <div class="Diseño-1">
         <section id="Mi_Favorito">
             <h2>Videojuegos 🎮</h2>
@@ -150,13 +154,9 @@
             </div>
     </div>
     </div>
-
-
     </section>
     </div>
-
-
-
+    <!-- PRESENTACION -->
     <div class="Diseño-1">
         <section id="Presentacion">
             <h2>Presentación 😁</h2>
@@ -167,6 +167,7 @@
             </p>
         </section>
     </div>
+    <!-- PROYECTOS -->
     <div class="Diseño-1">
         <section id="Proyectos">
             <h2>Proyectos 📁</h2>
@@ -180,6 +181,7 @@
             <img src="assets/Logo Cheiviz_shop.png" alt="Logo Cheiviz_shop">
         </section>
     </div>
+    <!-- ESTUDIOS -->
     <div class="Diseño-1">
         <section id="Estudios">
             <h2>Estudios 🎓</h2>
@@ -199,6 +201,7 @@
             </ul>
         </section>
     </div>
+    <!-- MI TIENDA -->
     <div class="Diseño-1">
         <section id="The_cheiviz">
             <h2>The Cheiviz Shop 🛒</h2>
@@ -230,7 +233,7 @@
             </div>
         </section>
     </div>
-
+    <!-- BLOG -->
     <div class="Diseño-1">
         <section id="Blog">
             <h2>Blog 📓</h2>
@@ -244,7 +247,7 @@
             </article>
         </section>
     </div>
-
+    <!-- FORMULARIO -->
     <div class="Diseño-1">
         <div class="container mt-5">
             <h2>Formulario de Inscripcion The Cheiviz📩</h2>
@@ -325,7 +328,7 @@
             }, 500); // Incrementa cada 1/2 segundos
         }
     </script>
-
+    <!-- FOOTER -->
     <footer class="bg-light text-center text-lg-start mt-4">
         <div class="container p-4">
             <div class="row">
