--- a/index2.html
+++ b/index2.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Tabla de Usuarios The Cheiviz</title>
 </head>
 
 <body>
-
+    <!-- CREACION DE LA TABLA DE USUARIOS -->
     <div class="container mt-4">
 
         <h2 class="mt-4"> Usuarios Registrados 🎓</h2>
